adde throughput info